# cuallee

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  app.py  conftest.py  index.html  log4j.properties  mkdocs.yaml  my_run.py  notes.txt  objects.inv  perftest.py  project.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  todo.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
advanced/: index.html
bigquery/: index.html
catalogue/: index.html
cuallee/: __init__.py  bigquery_validation.py  daft_validation.py  dataframe.py  db_validation.py  duckdb_validation.py  exceptions.py  helper_functions.py  mysql_validation.py  old.py  pandas_validation.py  polars.validation.py  polars_validation.py  psql_validation.py  pyspark_validation.py  snow_validation.py  snowpark_validation.py  spark_validation.py  sql_validation.py  utils.py
cuallee/bio/: amino_acids.csv  checks.py
cuallee/cloud/: __init__.py
cuallee/core/: check.py  compute_engine.py  control.py  exception.py  rule.py  utils.py
cuallee/core/engines/: pandas_qa.py  pyspark_qa.py
cuallee/dagster/: __init__.py
cuallee/engine/: base.py  daft.py  duckdb.py  pyspark.py
cuallee/engine/duckdb/: __init__.py
cuallee/engine/pyspark/: __init__.py  utils.py
cuallee/engines/: bigquery_validation.py  daft_validation.py  pandas_validation.py  polars_validation.py  pyspark_validation.py  snowpark_validation.py
cuallee/family/complex/: __init__.py
cuallee/family/datetime/: __init__.py
cuallee/family/generic/: __init__.py
cuallee/family/ml/: __init__.py
cuallee/family/numeric/: __init__.py
cuallee/family/stats/: __init__.py
cuallee/family/string/: __init__.py
cuallee/iso/: checks.py
cuallee/logic/: __init__.py
cuallee/pandas/: pandas_validation.py  validation.py
cuallee/report/: __init__.py
cuallee/services/cloud/: __init__.py
cuallee/services/dagster/: __init__.py
cuallee/services/report/: __init__.py
cuallee/snowspark/: snow_validation.py
cuallee/spark/: spark_validation.py  validation.py
daft/: index.html
dependencies/: index.html
docs/: advanced.md  catalogue.md  check.md  dependencies.md  index.md  installation.md  new-check.md  pandas.md  usage.md  validate.md
docs/bigquery/: index.md
docs/daft/: index.md
docs/duckdb/: index.md
docs/frameworks/: index.md
docs/module/: check.md  rule.md
docs/pandas/: index.md
docs/polars/: index.md
docs/pyspark/: index.md  spark_connect.md
docs/snowpark/: index.md
docs/stylesheets/: extra.css
duckdb/: index.html
frameworks/: index.html
installation/: index.html
module/check/: index.html
module/rule/: index.html
new-check/: index.html
pandas/: index.html
paper/: paper.bib  paper.jats  paper.md
polars/: index.html
pyspark/: index.html
pyspark/observation/: index.html
search/: search_index.json
snowpark/: index.html
templates/: index.html
test/: test_contained_in.py  test_is_between.py  test_numeric_rules.py
test/fixtures/: data.parquet  unit_data.parquet
test/fixtures/pyspark.parquet/: .part-00000-76d880c1-9002-4d63-961c-ead01954d55e-c000.snappy.parquet.crc  part-00000-76d880c1-9002-4d63-961c-ead01954d55e-c000.snappy.parquet
test/performance/cuallee/: Dockerfile  launcher.sh  sparker.py  sparker2.py  test_performance_cuallee.py
test/performance/greatexpectations/: Dockerfile  launcher.sh  sparker2.py  test_performance_gx.py
test/performance/pydeequ/: Dockerfile  launcher.sh  sparker.py  sparker2.py  test_performance_pydeequ.py
test/performance/soda/: Dockerfile  launcher.sh  sparker2.py  test_performance_soda.py
test/unit/: how-to-test.md  test_ValueRange  test_are_complete.py  test_are_unique.py  test_contained_in.py  test_has_correlation.py  test_has_max.py  test_has_max_by.py  test_has_mean.py  test_has_min.py  test_has_min_by.py  test_has_pattern.py  test_has_percentile.py  test_has_std.py  test_has_weekday_continuity.py  test_helper_functions.py  test_is_between.py  test_is_complete.py  test_is_contained_in.py  test_is_equal_than.py  test_is_greater_or_equal_than.py  test_is_greater_than.py  test_is_in_billions.py  test_is_in_millions.py  test_is_inside_interquartile_range.py  test_is_less_or_equal_than.py  test_is_less_than.py  test_is_on_friday.py  test_is_on_monday.py  test_is_on_saturday.py  test_is_on_sunday.py  test_is_on_thursday.py  test_is_on_tuesday.py  test_is_on_wednesday.py  test_is_on_weekday.py  test_is_on_weekend.py  test_is_positive.py  test_is_unique.py  test_numeric_rules.py  test_rule_update_functions.py  (+6 more)
test/unit/bigquery/: test_are_complete.py  test_are_unique.py  test_has_cardinality.py  test_is_complete.py  test_is_contained_in.py  test_is_daily.py  test_is_unique.py  test_not_contained_in.py
test/unit/bio_checks/: test_duckdb.py  test_polars.py  test_pyspark.py
test/unit/class_check/: test_ok.py  test_representation.py  test_sampling.py  test_validate.py
test/unit/class_control/: test_methods.py
test/unit/class_rule/: test_rule_update_functions.py  (+1 more)
utils/: test_scripts.sh
validate/: index.html
(+462 files in other folders)
