[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuallee"
version = "1.0.0"

authors = [
  { name="Herminio Vazquez", email="canimus@gmail.com"},
  { name="Virginie Grosboillot", email="vestalisvirginis@gmail.com" }
]
license = {file = "LICENSE"}
description = "Python library for data validation on DataFrame APIs including Apache/PySpark, Snowflake/Snowpark, DuckDB and Pandas/DataFrame."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "toolz >= 1.0.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "ruff==0.9.5",
  "pre-commit==4.1.0",
  "rich == 13.9.4",
]
pyspark = [
  "pyspark>=3.5.4"
]
pyspark_connect = [
  "pyspark[connect]"
]
snowpark = [
  "snowflake-snowpark-python==1.27.0",
  "pyarrow >= 19.0.0"
]
pandas = [
  "pandas>=2.2.3"
]
bigquery =[
  "google-cloud-bigquery>=3.29.0",
  "pyarrow >= 19.0.0"
]
duckdb = [
  "duckdb==1.2.0"
]
polars = [
  "polars>=1.21.0"
]
test = [
  "pytest == 8.3.4",
  "pytest-cov == 6.0.0",
  "pendulum >= 3.0.0"
]
dagster = [
  "dagster == 1.9.11"
]
cloud = [
  "msgpack == 1.1.0",
]
pdf = [
  "fpdf2==2.8.2"
]
daft = [
  "getdaft == 0.4.3"
]
all = [
  "cuallee[dev,pyspark,pyspark_connect,snowpark,pandas,bigquery,duckdb,polars,test,dagster,cloud,pdf,daft]"
]

[tool.ruff.lint]
# Skip unused variable rules (`F841`).
ignore = ["E731"]

[tool.pytest.ini_options]
addopts = "--cov=cuallee --import-mode=importlib"
testpaths = ["test"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[project.urls]
"Homepage" = "https://github.com/canimus/cuallee"
"Bug Tracker" = "https://github.com/canimus/cuallee"
